# pinelabs-online-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  server.json
.agents/skills/pinelabs-mcp-local-setup/: SKILL.md
.agents/skills/pinelabs-mcp-tool-gen/: SKILL.md
.claude/: README.md  settings.json
.cursor/: rules
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: chocolatey-publish.yml  create-secrets.yaml  lint.yml  security.yml  test.yml
chocolatey/: pinelabs-mcp.nuspec
chocolatey/tools/: VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
cli/pinelabs_mcp_server/: http.py  main.py  stdio.py
examples/: claude-desktop-config.json  docker-compose.yml  vscode-mcp.json
pkg/log/: log.py
pkg/observability/: observability.py
pkg/pinelabs/: api_docs.py  api_docs_fetcher.py  checkout_orders.py  client.py  config.py  mcp_api.py  orders.py  payment_links.py  routes.py  server.py  subscriptions.py  success_rate.py  tools.py  upi_intent_qr.py
pkg/toolsets/: toolsets.py
tests/: conftest.py  test_api_docs_tool.py  test_checkout_orders_tool.py  test_config.py  test_errors.py  test_main.py  test_mcp_api.py  test_models.py  test_orders.py  test_orders_tool.py  test_payment_links.py  test_payment_links_tool.py  test_subscriptions_tool.py  test_success_rate_tool.py  test_tools.py  test_upi_intent_qr_tool.py  test_utils.py  test_validators.py
(+10 files in other folders)
